<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_donation"
        android:icon="@drawable/ic_donation"
        android:title="@string/title_donation" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_events"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_redeem"
        android:icon="@drawable/ic_redeem"
        android:title="@string/title_redeem"/>

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/title_community"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>

</menu>