<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_donation">

    <fragment
        android:id="@+id/navigation_donation"
        android:name="com.example.cheerup.ui.fragments.DonationFragment"
        android:label="@string/title_donation"
        tools:layout="@layout/fragment_donation" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.cheerup.ui.fragments.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_redeem"
        android:name="com.example.cheerup.ui.fragments.RedeemFragment"
        android:label="@string/title_redeem"
        tools:layout="@layout/fragment_redeem" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.cheerup.ui.fragments.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.cheerup.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>