<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Payment"
    tools:layout_editor_absoluteX="-7dp"
    tools:layout_editor_absoluteY="-45dp">

    <Button
        android:id="@+id/DonateBtn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:text="@string/donate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_card_details"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <EditText
        android:id="@+id/CardCvvTxt"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_card_cvv"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/DonateBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/CardNumberTxT"
        android:layout_width="332dp"
        android:layout_height="51dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/enter_card_number"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/CardCvvTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/monthSpinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/expiry_date"
        app:layout_constraintBottom_toTopOf="@+id/monthSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/CardCvvTxt"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/CardTypeRadioGrp"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/CardNumberTxT"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/visa"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="269dp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/master_card"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="269dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/card_type"
        app:layout_constraintBottom_toTopOf="@+id/CardTypeRadioGrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"

        />



</androidx.constraintlayout.widget.ConstraintLayout>