<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <Button
        android:id="@+id/donateMoneyBtn"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="169dp"
        android:layout_height="121dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="141dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/donate_money"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/donateOthersBtn"
        android:layout_width="169dp"
        android:layout_height="121dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="141dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/donate_other_stuff"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateMoneyBtn" />

    <Button
        android:id="@+id/centerBtn"
        android:layout_width="169dp"
        android:layout_height="121dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="141dp"
        android:backgroundTint="#D6D7D7"
        android:fontFamily="sans-serif-medium"
        android:text="@string/donation_centers"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donateOthersBtn" />

    <TextView
        android:id="@+id/coinsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coins_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>



