<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="195dp">

                <ImageView
                    android:id="@+id/eventImage"

                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="matrix"
                    tools:ignore="ImageContrastCheck" />


            </RelativeLayout>


            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtName"
                    android:textSize="18sp"
                    android:textColor="#1A1A1A"
                    android:text="@string/fundraising_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtName"
                    android:text="@string/online" />

            </RelativeLayout>

            <TextView
                android:background="#414141"
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>